Fix overflow from gallery section on chrome platform

--- a/styles/sass/_mediaQuery.scss
+++ b/styles/sass/_mediaQuery.scss
@@ -69,7 +69,7 @@
   .thisMonthProfile img {
     width: 60%;
     height: auto;
-    margin-top: 100px;
+    margin: 100px auto 20px auto;
   }
 
   .HeaderBackground {
@@ -116,6 +116,17 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 200px;
+  }
+
+  // Gallery
+  .gallery {
+    flex-direction: column;
+    align-items: center;
+    // display: block;
+  }
+
+  .gallery img {
+    max-width: 100%;
   }
 }
 
